# vi2048

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  SaveGame0.ini  build.sh  clean.sh  main.c  vi2048
.github/workflows/: ci.yml
lib/: direction.c  direction.h  keys.c  keys.h  random_number.c  random_number.h
scripts/: smoke_test.sh
src/: game.c  game.h  game_saving.c  game_saving.h  high_score.c  high_score.h  menu.c  menu.h  print_tools.c  print_tools.h  utils.c  utils.h
